v3.00 final - Not yet released

- ADDED: Data export: save a data object to a file series on disk

- FIXED: Combo box width for Windows Look & Feel
- FIXED: Lots of little bugfixes


v3.00 beta4 - Wednesday, March 16, 2005

- ADDED: Volume rendering
- ADDED: Arbitrary slice data transform
- ADDED: Data cache system for managing full-resolution data in memory
- ADDED: Expanded VisBio help system
- ADDED: Pressing arrow keys on a display cycles through dimensional positions
- ADDED: Ctrl + arrow keys on a display causes it to pan
- ADDED: Shift + up/down arrow keys on a display zooms in and out
- ADDED: Shift + left/right arrow keys on a display rotates around Z axis
- ADDED: Shift + ctrl + arrow keys on a 3D display rotates around X and Y axes
- ADDED: Typing characters on a display affects selected text overlays
- ADDED: Pressing delete on a display removes selected overlays

- FIXED: Rewrote TIFF importer to be an order of magnitude more efficient
- FIXED: Broken data transforms (sampling, max intensity, collapse, spectral)
- FIXED: Upside down ZVI datasets
- FIXED: Several overlay data transform bugs
- FIXED: Several window centering issues


v3.00 beta3 - Wednesday, February 2, 2005

- ADDED: Overlays data transform for creating overlay annotations
- ADDED: "Immediate" data transforms that ignore full-resolution burn-in delay
- ADDED: Individual control over each data object's color settings
- ADDED: Transparency settings within data object color settings
- ADDED: Proper management of multiple data object Z-ordering
- ADDED: Preload most classes to speed up VisBio response time
- ADDED: Controls for altering how long full-resolution burn-in is delayed
- ADDED: Ability to toggle whether consoles pop up when output is produced
- ADDED: System button for dumping system properties to output console

- TWEAK: Dataset chooser displays progress bar while analyzing file pattern
- TWEAK: Dataset chooser jumps to directory specified in file pattern field
